Added 128 bit natural addition, and proper struct hex dumping for int structs

--- a/cygwin/i686-w64-mingw32/Makefile
+++ b/cygwin/i686-w64-mingw32/Makefile
@@ -1,8 +1,7 @@
 AS=nasm
 ASFLAGS=-f win32 -I includes/ -g
 CC=i686-w64-mingw32-gcc
-CFLAGS=-I includes -g
-CXX=i686-w64-mingw32-g++
+CFLAGS=-I includes -std=c11 -Wall -g
 
 .PHONY: all addition clean cleanall
 
